<resources>
    <string name="app_name" translatable="false">Team Connect</string>
    <string name="hint_pola_wiadomosci">Your messege...</string>
    <string name="send_button">Wyślij</string>
    <string name="title_activity_main">Messenger Viva la Salsa</string>
    <string name="title_home">Wyślij wiadomość</string>
    <string name="title_dashboard">Zarządzaj grupami</string>
    <string name="title_notifications">Edytuj grupy</string>
    <string name="title_activity_ad_mobs" translatable="false">AdMobs</string>

    <string name="action_settings" translatable="false">Settings</string>

    <string name="interstitial_ad_sample" translatable="false">Interstitial Ad Sample</string>
    <string name="start_level" translatable="false">Level 1</string>
    <string name="next_level" translatable="false">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-7387128384946273~6821690422</string>
    <string name="title_activity_general" translatable="false">GeneralActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="send_message">Send Message</string>
    <string name="menage_teams">Menage Teams</string>
    <string name="history">History</string>
    <string name="templates">Templates</string>
    <string name="add_team">Add Team</string>
    <string name="OK" translatable="false">OK</string>
    <string name="Empty">Empty</string>
    <string name="plan">Plan</string>
    <string name="add_contact">Add Contact</string>
    <string name="Update">Update</string>
    <string name="group_alredy_exist">A group with that name already exists</string>
    <string name="add_template">Add Template</string>
    <string name="write_your_template">Write your template...</string>
    <string name="select_a_group">Select a group</string>
    <string name="Message_was_sent">Message was sent</string>
    <string name="select_template">Select template</string>
    <string name="No_groups_error">Before sending a message, create a group</string>
    <string name="message_empty_error">You did not write the message</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="enter_the_name_of_the_group">Enter the name of the group</string>
    <string name="save">Save</string>
    <string name="anuluj" translatable="false">Anuluj</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="number">number</string>
    <string name="email">email</string>
    <string name="name_of_group">Name of group</string>
    <string name="add_to_existing_groups">Add to existing groups</string>
    <string name="Contact_added">Contact was added successfully</string>
    <string name="add">Add</string>
    <string name="add_plan">Add plan</string>
    <string name="repeat_every_week">Repeat every week</string>
    <string name="repeat_every_month">Repeat every month</string>
    <string name="repeat_every_year">Repeat every year</string>
    <string name="please_set_name_of_plan">Please set name of new plan</string>
    <string name="please_set_text_of_message">Please set text of message</string>
    <string name="repeat_every_day">Repeat every day</string>
    <string name="please_select_group">Please select groups</string>
    <string name="you_have_no_group">You have no group</string>
    <string name="yes">Yes</string>
    <string name="repeat">"Repeat: "</string>
    <string name="none">none</string>
    <string name="daily">daily</string>
    <string name="weekly">weekly</string>
    <string name="monthly">monthly</string>
    <string name="yearly">yearly</string>
    <string name="set_time">Set time</string>
    <string name="set_date">Set Date</string>
    <string name="please_set_date">Please set date</string>
    <string name="please_set_time">Please set time</string>
</resources>
