<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_send_msg"
            android:icon="@drawable/ic_facebook_messenger_black_24dp"
            android:title="@string/send_message" />
        <item
            android:id="@+id/nav_menage_teams"
            android:icon="@drawable/ic_account_multiple_black_24dp"
            android:title="@string/menage_teams" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_timer_sand_black_24dp"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_template"
            android:icon="@drawable/ic_note_text_black_24dp"
            android:title="@string/templates" />
        <item
            android:id="@+id/nav_plan"
            android:icon="@drawable/ic_clock_fast_black_24dp"
            android:title="@string/plan" />
        <item
            android:id="@+id/nav_add_contact"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:title="@string/add_contact" />

    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
