<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <com.zerter.teamconnect.Controlers.MyButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?actionBarItemBackground"
        android:id="@+id/AddPlanButton"
        android:text="@string/add_plan"
        android:textColor="@color/textColor"
        app:customFont="@string/Oswald_Bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textColor"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:baselineAligned="false"
            android:divider="@color/textColor"
            android:dividerPadding="5dp"
            android:showDividers="middle">
            <com.zerter.teamconnect.Controlers.MyEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nameOfPlan"
                android:hint="@string/name"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                app:customFont="@string/Oswald_Light"
                android:layout_marginBottom="10dp"/>

            <com.zerter.teamconnect.Controlers.MyButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:customFont="@string/Oswald_Bold"
                android:textColor="@color/textColor"
                android:text="@string/select_a_group"
                android:background="?actionBarItemBackground"
                android:id="@+id/selectGroupAddPlan"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/listViewSelectedGroups"/>
            <DatePicker
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/calendar"
                android:layout_marginBottom="10dp"/>

            <TimePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:id="@+id/timePicker"/>
            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repeat_every_day"
                android:id="@+id/switchOfDay"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                android:layout_marginBottom="10dp"/>
            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repeat_every_week"
                android:id="@+id/switchOfWeek"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                android:layout_marginBottom="10dp"/>
            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repeat_every_month"
                android:id="@+id/switchOfMonth"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                android:layout_marginBottom="10dp"/>
            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repeat_every_year"
                android:id="@+id/switchOfYear"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                android:layout_marginBottom="10dp"/>
            <com.zerter.teamconnect.Controlers.MyEditText
                android:id="@+id/editText_tresc_smsa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/textColor"
                android:gravity="top|start"
                android:hint="@string/hint_pola_wiadomosci"
                android:padding="5dp"
                app:customFont="fonts/Oswald-Light.ttf"
                android:layout_marginBottom="20dp"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>